<resources>
    <string name="app_name">My Studio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="title_activity_auth">Sign in</string>

    <string name="mp.music.default_duration">00:00</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enterPhone">Enter your Phone Number</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
    <string name="percentage">%</string>
    <string name="fname">Enter your first name</string>
    <string name="lname">Enter your login</string>
    <string name="email">Your email address</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="fulname">Your full name</string>
    <string name="enterPin">Enter you Pin</string>
    <string name="login">Login</string>
    <string name="donthave">Don’t you have an Account?</string>
    <string name="signUp">Sign up</string>
    <string name="confirmPin">Confirm Pin</string>
    <string name="resetPin">Reset Pin</string>
</resources>
