<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shixels.thankgodrichard.mixer.allViews.profile">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="100dp"
            android:id="@+id/profilePic"
            android:src="@drawable/user"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:background="@android:color/transparent"
            android:text="Edith"
            android:layout_alignParentRight="true"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/profilePic"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/firstname"
                android:hint="@string/fulname"
                android:maxLines="1"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lasname"
                android:enabled="false"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:hint="@string/lname"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/phoneNumber"
                android:inputType="phone"
                />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#32cd32"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:layout_marginBottom="10dp"
                android:text="@string/submit" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/facebook"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:background="#3b5998"
                android:visibility="gone"
                android:text="@string/facebook"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/twitter"
                android:visibility="gone"
                android:textSize="16sp"
                android:background="#0084b4"
                android:text="@string/twitter"/>


        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
