<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#2b313e"
    android:layout_height="match_parent"
    tools:context="com.shixels.thankgodrichard.mixer.Auth">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="100dp"
            android:id="@+id/logo"
            android:layout_height="100dp"
            android:src="@drawable/logo"/>


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_below="@+id/logo"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:background="#363d4d"
          android:layout_marginTop="20dp"
          android:id="@+id/auth_button"
          android:layout_height="wrap_content">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#d9d9d9"
              android:id="@+id/donthaveText"
              android:layout_marginLeft="14dp"
              android:layout_marginTop="10dp"
              android:text="@string/donthave"
              />

          <Button
              android:layout_width="100dp"
              android:id="@+id/signup"
              android:layout_marginTop="3dp"
              android:layout_alignParentRight="true"
              android:textColor="@color/white"
              android:background="#1e2736"
              android:layout_marginRight="14dp"
              android:layout_height="30dp"
              android:text="@string/signUp"/>


          <EditText
              android:layout_width="match_parent"
              android:id="@+id/phoneNumber"
              android:layout_below="@+id/donthaveText"
              android:inputType="phone"
              android:layout_marginTop="14dp"
              android:layout_marginRight="14dp"
              android:maxLength="15"
              android:layout_marginLeft="14dp"
              android:backgroundTint="#464f64"
              android:textColor="@color/white"
              android:textColorHint="#aaaaaa"
              android:background="@drawable/square_border"
              android:layout_height="wrap_content"
              android:hint="@string/enterPhone"/>

          <EditText
              android:layout_width="match_parent"
              android:id="@+id/pin"
              android:inputType="numberPassword"
              android:layout_marginTop="10dp"
              android:layout_below="@+id/phoneNumber"
              android:layout_marginRight="14dp"
              android:layout_marginLeft="14dp"
              android:maxLength="4"
              android:backgroundTint="#464f64"
              android:textColor="@color/white"
              android:textColorHint="#aaaaaa"
              android:background="@drawable/square_border"
              android:layout_height="wrap_content"
              android:hint="@string/enterPin"/>


          <Button
              android:layout_width="117dp"
              android:id="@+id/submit"
              android:layout_marginTop="10dp"
              android:textColor="@color/white"
              android:background="#1e2736"
              android:layout_marginBottom="10dp"
              android:layout_below="@+id/pin"
              android:layout_centerHorizontal="true"
              android:layout_height="45dp"
              android:text="@string/login"/>
      </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/auth_button"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:layout_width="278dp"
                android:src="@drawable/fb"
                android:id="@+id/fblogin"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="50dp" />
            <ImageButton
                android:layout_width="278dp"
                android:src="@drawable/google"
                android:id="@+id/googlelogin"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="50dp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pleaseWait"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
